--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
 
         position: absolute;
         top: -5px;
-        left: 15px;
+        left: 0;
 
         z-index: 101; /*Highest Z Index */
 }
@@ -53,10 +53,78 @@
 
         text-decoration: none;
         cursor: pointer;
+
+        display: block;
 }
 
 .header_navbar_shortcut:hover {
         text-decoration: underline;
+}
+
+.header_navbar_shortcut_hamburger {
+        padding: 10px 15px;
+        background-color: #181818;
+
+        text-decoration: none;
+        cursor: pointer;
+
+        border-radius: 5px;
+
+        display: none;
+}
+
+.header_navbar_shortcut_hamburger:hover {
+        text-decoration: underline;
+}
+
+.header_dropdown {
+        width: 240px;
+        max-height: calc(100vh - 60px);
+        position: absolute;
+
+        top: 50px;
+        right: 15px;
+
+        z-index: 999;
+
+        border-radius: 5px;
+        background-color: #181818;
+
+        visibility: hidden;
+        opacity: 0%;
+        transition: visibility .3s, opacity .3s;
+}
+
+.header_dropdown_shortcut {
+        width: Calc(100% - 20px);
+        height: auto;
+        position: relative;
+
+        padding: 10px 10px;
+        text-decoration: none;
+        cursor: pointer;
+
+        color: #F4F3EE;
+}
+
+.header_dropdown_shortcut:hover {
+        text-decoration: underline;
+}
+
+.header_dropdown_shortcut a {
+         text-decoration: none;
+         color: #F4F3EE;
+ }
+
+.header_dropdown_shortcut h2 {
+        font-family: "Josefin Sans", Arial, sans-serif;
+        font-size: 16px;
+        line-height: 1.2;
+        font-weight: bold;
+
+        color:#F4F3EE;
+
+        margin: 0px;
 }
 
 .background {
@@ -247,6 +315,31 @@ hr {
         }
 }
 
+@media (max-width: 720px) {
+        .background_title {
+                width: 100%;
+                height: auto;
+
+                overflow-wrap: anywhere;
+        }
+
+        .background_compact_title {
+                width: 100%;
+                height: auto;
+
+                overflow-wrap: anywhere;
+        }
+
+        /* Hamburger Menu */
+        .header_navbar_shortcut {
+                display: none;
+        }
+
+        .header_navbar_shortcut_hamburger {
+                display: block;
+        }
+}
+
 .container_content {
         width: 100%;
         height: auto;
@@ -256,6 +349,52 @@ hr {
         grid-column: span 2;
 
         margin-bottom: 20px;
+}
+
+.container_calltoaction {
+        width: 100%;
+        height: auto;
+        position: relative;
+        float: left;
+
+        grid-column: span 3;
+
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+
+        margin-bottom: 20px;
+}
+
+.container_calltoaction .container_button {
+        max-width: 100%;
+        position: relative;
+
+        padding: 10px 15px;
+        border-radius: 5px;
+
+        background-color: #463F3A;
+        color:#F4F3EE;
+
+        margin: 0px 15px;
+        text-decoration: none;
+        cursor: pointer;
+
+        text-align: center;
+}
+
+.container_calltoaction .container_button:hover {
+        text-decoration: underline;
+}
+
+@media (max-width: 360px) {
+        .container_calltoaction {
+                flex-direction: column;
+        }
+
+        .container_calltoaction .container_button {
+                margin-bottom: 20px;
+        }
 }
 
 .container_image {
@@ -287,6 +426,8 @@ hr {
         grid-column: span 3;
 
         margin-bottom: 20px;
+
+        overflow-wrap: anywhere;
 }
 
 .container_wide_image {
@@ -419,9 +560,14 @@ hr {
         color: #F4F3EE;
 }
 
-@media (max-width: 375px){
+/* Temporarily Cancelled
+@media (max-width: 720px){
 .header h2 {
         font-size: 24px;
+}
+
+.background_title p {
+        font-size: 16px;
 }
 
 .background_title h2 {
@@ -431,7 +577,13 @@ hr {
 .background_compact_title h2 {
         font-size: 24px;
 }
+
+.background_compact_title p {
+        font-size: 16px;
 }
+}
+*/
+
 
 p {
         font-family: "Quicksand", Arial, sans-serif;
@@ -454,4 +606,18 @@ h2 {
         line-height: 1.2;
 
         font-style: italic;
+}
+
+.container_calltoaction h2 {
+        font-family: "Josefin Sans", Arial, sans-serif;
+        font-size: 24px;
+        line-height: 1.2;
+        font-weight: bold;
+
+        margin: 0px;
+}
+
+.container_calltoaction a {
+        text-decoration: none;
+        color: #F4F3EE;
 }
